# Chip_8_Emulator

./: .gitignore  CMakeLists.txt  README.md  chip8.cpp  chip8.h  main.cpp
